## Change log

### 1.0.2
* Dev - Changing icons to be inline svgs.
* Fix - Fixing the week view order to be by date.

### 1.0.1
* Fix - Style fixes and improvements on desktop and mobile.

### 1.0
* Initial release