@@ -96,20 +96,30 @@
 						<h2 class="title-lined"><?php wp_kses_post( 'Meal Plan', 'lsx-health-plan' ); ?><span><?php wp_kses_post( 'Extras', 'lsx-health-plan' ); ?></span></h2>
 					</div>
 					<div class="row tip-row extras-box">
-						<div class="col-md-4">
-							<div class="content-box tip-left box-shadow">
-								<h3 class="eating-title title-lined"><?php echo wp_kses_post( 'Recipes', 'lsx-health-plan' ); ?></h3>
-								<p><?php echo wp_kses_post( 'If theres a recipe for the day you can find it here or under the recipes tab.', 'lsx-health-plan' ); ?></p>
-								<a class="btn border-btn btn-full" href="<?php echo the_permalink(); ?>recipes"><?php echo wp_kses_post( 'View Recipe', 'lsx-health-plan' ); ?><i class="fa fa-angle-right" aria-hidden="true"></i></a>
-							</div>	
-						</div>
-						<div class="col-md-4">
-							<div class="content-box tip-middle box-shadow">
-								<h3 class="eating-title title-lined"><?php echo wp_kses_post( 'Shopping List', 'lsx-health-plan' ); ?></h3>
-								<p><?php echo wp_kses_post( 'Checkout the shopping list and make sure you have all the goodies you need!', 'lsx-health-plan' ); ?></p>
-								<a class="btn border-btn btn-full" href="<?php echo esc_url( get_page_link( $shopping_list ) ); ?>" target="_blank"><?php echo wp_kses_post( 'View Shopping List', 'lsx-health-plan' ); ?><i class="fa fa-angle-right" aria-hidden="true"></i></a>
-							</div>	
-						</div>
+						<?php
+						$connected_recipes = get_post_meta( get_the_ID(), 'connected_recipes', true );
+						if ( ! empty( $connected_recipes ) ) {
+							?>
+							<div class="col-md-4">
+								<div class="content-box tip-left box-shadow">
+									<h3 class="eating-title title-lined"><?php echo wp_kses_post( 'Recipes', 'lsx-health-plan' ); ?></h3>
+									<p><?php echo wp_kses_post( 'If theres a recipe for the day you can find it here or under the recipes tab.', 'lsx-health-plan' ); ?></p>
+									<a class="btn border-btn btn-full" href="<?php echo the_permalink(); ?>recipes"><?php echo wp_kses_post( 'View Recipe', 'lsx-health-plan' ); ?><i class="fa fa-angle-right" aria-hidden="true"></i></a>
+								</div>	
+							</div>
+						<?php } ?>
+						<?php
+						if ( ! empty( $shopping_list ) ) {
+							?>
+							<div class="col-md-4">
+								<div class="content-box tip-middle box-shadow">
+									<h3 class="eating-title title-lined"><?php echo wp_kses_post( 'Shopping List', 'lsx-health-plan' ); ?></h3>
+									<p><?php echo wp_kses_post( 'Checkout the shopping list and make sure you have all the goodies you need!', 'lsx-health-plan' ); ?></p>
+									<a class="btn border-btn btn-full" href="<?php echo esc_url( get_page_link( $shopping_list ) ); ?>" target="_blank"><?php echo wp_kses_post( 'View Shopping List', 'lsx-health-plan' ); ?><i class="fa fa-angle-right" aria-hidden="true"></i></a>
+								</div>	
+							</div>
+						<?php } ?>
+						
 						<div class="col-md-4">
 							<div class="tip-right">
 								<?php echo do_shortcode( '[lsx_health_plan_featured_tips_block]' ); ?>
